hvantran/project-management#68 Share action configuration cross the jobs